# prefabric_26

./: .gitignore  README.md  deploy.md  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
app/: logic.py  main.py  models.py  utils.py
app_workspace.egg-info/: PKG-INFO  SOURCES.txt
outputs/: sample_report.txt
server/: index.ts
templates/: index.html
