[project]
name = "prefabric_26"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = ["app"]
